// Copyright 2018 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package reconciler;

import "google/protobuf/timestamp.proto";

// TaskUpdate represents a change in the state of an existing task, or the
// creation of a new task.
message TaskUpdate {

	// TODO: Determine which of these other update types we need:
	// - CANCELLED: a queued task is removed from the queue without running
	// - ABORTED: a running task is moved off of worker but not returned to queue
	//   (and worker is not marked as idle, nor is it running a chargeable
        //   task).

	enum Type {
		// Invalid update type.
		NULL = 0;

		// A new task has been enqueued.
		NEW = 1;

		// A task has been assigned to a worker.
		ASSIGNED = 2;

		// A task that was previously assigned to a worker has been interrupted and
		// reenqueued.
		INTERRUPTED = 3;
	}


	// Time is the time at which this Update occurred.
	google.protobuf.Timestamp time = 1;

	// Type describes which kind of update this represents.
	Type type = 2;

	// RequestId is the id of the request that is being created or updated.
        // This is supplied by the scheduler client -- for swarming this would
        // be the swarming task id.
	string request_id = 3;

	// WorkerId is the worker that the request is:
	// - case NEW:         <invalid> TODO(akeshet): error out if this is supplied
	// - case ASSIGNED:    starting to run on.
	// - case INTERRUPTED: previously running on.
	string worker_id = 4;

	// ProvisionableLabels is the label set for the new task.
	// This field is only relevant and should only be set for NEW type updates.
	repeated string provisionable_labels = 5;

	// AccountId is the id of the quota account that should be charged
	// for the new task. This field is only relevant and should only be set
	// for NEW type updates.
	string account_id = 6;
}
